--- a/src/css/css-02-s.css
+++ b/src/css/css-02-s.css
@@ -35,7 +35,7 @@
 	footer .copyright{margin-right: 15px;}
 	footer .copyright-first-year, footer .copyright-ds {display: inline;}
 
-	.content-tune h2, .content-tune h5, .content-tune .tune-links {text-align: unset;}
+	.content-tune .tune-title, .content-tune .tune-release-date, .content-tune .tune-links {text-align: unset;}
 
 	.content-discography .album-contents-wrapper {flex-flow: row;}
 	.content-discography .album-cover {margin-right: 1.33em;}
