--- a/src/css/css-00-base.css
+++ b/src/css/css-00-base.css
@@ -77,16 +77,27 @@ hr {
 
 
 /*==============  Menus ==============*/
+.menu > ul {
+	margin: 0;
+	padding: 0 0 12px 0;
+}
+
 .menu li, .content-tune .tune-links li {
 	list-style-type: none;
 }
 
 .menu li > a {
 	border-bottom: 1px solid #666;
+	padding: 12px 8px;
 }
 
-header .menu-music > ul {
-	margin-top: 0;
+.menu li > a .icon {
+	margin: 0 10px 0 6px;
+}
+
+.menu-main li > a .fa-chevron-down {
+	font-size: 0.5em;
+	vertical-align: middle;
 }
 
 /*============== Language Menu ==============*/
@@ -95,7 +106,6 @@ header .menu-music > ul {
 	border-radius: 3px;
 	display: inline-block;
 	height: 18px;
-	margin: 0 2px;
 	vertical-align: middle;
 	width: 24px;
 }
@@ -112,6 +122,7 @@ header .menu-music > ul {
 	border-top: 1px solid #666;
 	position: fixed;
 }
+.menu-playlist > ul {padding: 0 5px;}
 .menu-playlist {
 	border-radius: 10px;
 	border-top: 1px solid #888;
