--- a/src/css/css-03-m.css
+++ b/src/css/css-03-m.css
@@ -72,25 +72,9 @@
 
 	.menu-main-wrapper {justify-content: flex-end;}
 
-	.menu-language-choice > ul, .menu-main > ul {
-		margin: 0 0 12px 0;
-		padding: 0;
-	}
-
-	.menu-playlist > ul {
-		margin: 0 0 12px 0;
-		padding: 0 5px;
-	}
-
 	.menu li {
 		display: block;
-		margin: 0;
 		padding: 0 12px 2px 12px;
-	}
-
-	.menu-main li > a .fa-chevron-down {
-		font-size: 0.5em;
-		vertical-align: middle;
 	}
 
 	.menu-playlist-wrapper {bottom: 2.5em;}
@@ -157,20 +141,17 @@
 		width: 80%;
 	}
 
+	.menu-music > ul {padding-left: 1em;}
+
 	.menu:not(.menu-playlist) li > a {
 		display: block;
 		font-size: 1.1em;
-		padding: 12px 8px;
 	}
 
 	.menu-playlist li > a {
 		font-size: 1em;
-		padding: 12px 8px;
 	}
 
-	.menu-main li > a .icon {
-		margin: 0 10px 0 6px;
-	}
 
 /*============== Content ==============*/
 	/* 100% - header-height - footer - player */
