--- a/src/css/css-12-s.css
+++ b/src/css/css-12-s.css
@@ -16,7 +16,7 @@
 
 	 /* 100% - header-height - footer - player */
 	.content-wrapper {min-height: calc(100vh - 64px - 2.5em - 2.5em);}
-	.content {padding: 0.67em 1.5em;}
+	.content {padding: 1em 1.5em 0.67em;}
 
 	.player {height: 2.5em;}
 	.player .playlist, .player .player-controls a {padding: 0 15px;}
