--- a/src/css/css-10-base.css
+++ b/src/css/css-10-base.css
@@ -62,9 +62,10 @@ hr {
 /*==============  Breadcrumbs ==============*/
 .breadcrumbs ul {
 	display: inline-block;
-	font-size: 0.9em;
+	font-size: 0.95em;
 	margin: 0 6px;
 	padding: 0;
+	text-align: left;
 }
 .breadcrumbs li {display: inline;}
 .breadcrumbs li span::after {content: " / ";}
