--- a/src/css/css-14-l.css
+++ b/src/css/css-14-l.css
@@ -68,6 +68,7 @@
 		display: block;
 		height: auto;
 		min-width: 380px;
+		overflow: initial; /* otherwise menu-music has no shadow */
 		text-align: right;
 		width: inherit;
 	}
