css is now minified when being built

--- a/src/css/css-10-base.css
+++ b/src/css/css-10-base.css
@@ -6,7 +6,7 @@
 }
 
 /**********************************************************************************
- * General / Reset styles
+ * Reset styles
  **********************************************************************************/
 .menu-closed {
 	height: 0;
