--- a/src/css/css-00-colors.css
+++ b/src/css/css-00-colors.css
@@ -65,8 +65,8 @@ footer .social-icons a:not(:last-child) {border-right: 1px solid var(--menu-sepa
 .menu-playlist {border-top: 1px solid var(--menu-icon-inactive-color);}
 
 .player {border-top: 1px solid var(--menu-separator-strong);}
-.player .track-progress-bar {background: var(--menu-separator-strong);}
-.player .track-progress-bar .track-progress {background: var(--menu-text-color);}
+.player .track-progress-bar-background {background: var(--menu-separator-strong);}
+.player .track-progress {background: var(--menu-text-color);}
 .player .player-controls a {border-left: 1px solid var(--menu-separator-medium);}
 .player .player-controls .fa-volume-mute {color: var(--menu-icon-inactive-color);}
 
