--- a/src/css/css-10-base.css
+++ b/src/css/css-10-base.css
@@ -1,7 +1,7 @@
 /**********************************************************************************
  * Debug
  **********************************************************************************/
-.content:not(.content-bio) {
+.content:not(.content-tune) {
 	display: none;
 }
 
