--- a/src/css/css-10-base.css
+++ b/src/css/css-10-base.css
@@ -272,3 +272,18 @@ footer .copyright-copy, footer .copyright-last-year {
 	text-align: right;
 	width: 45px;
 }
+
+
+/**********************************************************************************
+ * Hide the player by default. JS will undo this on supported browsers
+ **********************************************************************************/
+.unsupported-player .player,
+.unsupported-player .menu-playlist-wrapper,
+.unsupported-player .content-tune .tune-play {
+	display: none;
+}
+
+.unsupported-player footer {
+	margin-bottom: 0;
+	margin-top: 3em;
+}
