--- a/src/css/dev-demo.css
+++ b/src/css/dev-demo.css
@@ -1,2 +1,7 @@
 .player .track-progress {width: 22%;}
 footer .social-icons .bandcamp-link {display: inline;}
+
+.content:not(.content-tune) {
+	display: none;
+}
+
