--- a/src/py/main/templates/main/__root.html
+++ b/src/py/main/templates/main/__root.html
@@ -1,3 +1,5 @@
+{% load i18n %}
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -5,21 +7,24 @@
 		<meta charset="utf-8">
 		<title>
 			{% if page_name %}
-				{{page_name}}
-			{% else %}
-				Dimmu Saurus
+				{{page_name}} |
 			{% endif %}
+				Dimmu Saurus
 		</title>
 
+		{% if page_description %}
+			<meta name="description" content="{{page_description}}">
+		{% endif %}
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+		<base href="//127.0.0.1:3666/">
 
 		<link rel="shortcut icon" href="img/favicon.ico">
 
 		<link
 			rel="stylesheet"
 			href="static/reset.css">
-
 <!-- 		<link
 			rel="stylesheet"
 			href="https://unpkg.com/purecss@1.0.1/build/base-min.css"
@@ -55,7 +60,7 @@
 				<div class="toggle-wrapper toggle-main-menu-wrapper">
 					<a
 						href="javascript:;"
-						title="Main Menu">
+						title="{% trans 'Main Menu' %}">
 						<i class="fas fa-bars"></i>
 						<i class="fas fa-chevron-down"></i>
 					</a>
@@ -64,9 +69,9 @@
 				<div class="toggle-wrapper toggle-language-wrapper">
 					<a
 						href="javascript:;"
-						title="Change Language">
+						title="{% trans 'Change Language' %}">
 						<i class="fas fa-language"></i>
-						<span class="toggle-language-label">Language</span>
+						<span class="toggle-language-label">Language / Език</span>
 						<i class="fas fa-chevron-down"></i>
 					</a>
 				</div>
@@ -106,19 +111,19 @@
 							<li>
 								<a>
 									<i class="icon fas fa-home"></i>
-									Начало
+									{% trans "Home" %}
 								</a>
 							</li>
 							<li>
 								<a>
 									<i class="icon fas fa-book"></i>
-									Биография
+									{% trans "Biography" %}
 								</a>
 							</li>
 							<li>
 								<a id="music-button" href="javascript:;">
 									<i class="icon fas fa-music"></i>
-									Музика
+									{% trans "Music" %}
 									<i class="fas fa-chevron-down"></i>
 								</a>
 							</li>
@@ -254,19 +259,19 @@
 		<!-- Whitespace ruins alignment, so <a> tags had to be compressed -->
 		<footer class="shadow-top">
 			<div class="social">
-				<div class="social-label">Follow:</div>
+				<div class="social-label">{% trans "Follow" %}:</div>
 				<div class="social-icons">
 					<a
 						class="bandcamp-link"
-						title="Dimmu Saurus Bandcamp page"
+						title="{% trans 'Dimmu Saurus Bandcamp page' %}"
 						href="http://bandcamp.com"
 						target="_blank"><i class="fab fa-bandcamp"></i></a><a
 						class="facebook-link"
-						title="Dimmu Saurus on Facebook"
+						title="{% trans 'Dimmu Saurus on Facebook' %}"
 						href="https://www.facebook.com/dimmusaurus/"
 						target="_blank"><i class="fab fa-facebook-square"></i></a><a
 						class="youtube-link"
-						title="Dimmu Saurus Youtube channel"
+						title="{% trans 'Dimmu Saurus Youtube channel' %}"
 						href="https://www.youtube.com/playlist?list=PLBugGYGZgZWcA8ePOBLDdyD1__D7WWxMI"
 						target="_blank"><i class="fab fa-youtube"></i></a>
 				</div>
