--- a/src/py/main/templates/main/начало.html
+++ b/src/py/main/templates/main/начало.html
@@ -1,8 +1,9 @@
 {% extends 'main/index.html' %}
+{% load i18n %}
 
 {% block welcome_block %}
 	<p>Добре дошли в бърлогата на Черния Димозавър (латински: <i>Dimmu Saurus</i>). Това е гаражен проект за блус, рок и метъл без ограничения и без правила – каквато трябва да бъде истинската музика.
 	</p>
-	<p>Ако харесвате такава музика, продължете към <a href="/музика">дискографията</a>, за да чуете някоя песен. А ако сте любопитни да разберете нещо повече за проекта, прочетете <a href="/биография">историята на Димозавъръ</a>.
+	<p>Ако харесвате такава музика, продължете към <a href="/{% trans 'music/' %}">дискографията</a>, за да чуете някоя песен. А ако сте любопитни да разберете нещо повече за проекта, прочетете <a href="/{% trans 'biography/' %}">историята на Димозавъръ</a>.
 	</p>
 {% endblock %}
