--- a/src/py/main/templates/main/__root.html
+++ b/src/py/main/templates/main/__root.html
@@ -6,21 +6,21 @@
 	<head>
 		<meta charset="utf-8">
 		<title>
-			{% if page_name %}
-				{{page_name}} |
+			{% if page.title %}
+				{{ page.title }} |
 			{% endif %}
 				Dimmu Saurus
 		</title>
 
-		{% if page_description %}
-			<meta name="description" content="{{page_description}}">
+		{% if page.description %}
+			<meta name="description" content="{{ page.description }}">
 		{% endif %}
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 		<base href="//127.0.0.1:3666/">
 
-		<link rel="shortcut icon" href="img/favicon.ico">
+		<link rel="shortcut icon" href="static/img/favicon.ico">
 
 		<link
 			rel="stylesheet"
@@ -82,26 +82,32 @@
 					<nav class="menu menu-language-choice menu-closed shadow-bottom">
 						<ul>
 
+							{% language 'bg' %}
 							<li>
-								<a href="javascript:;">
+								<a href="{% trans page.url %}">
 									<span class="icon flag flag-bg"></span>
 									Български
 								</a>
 							</li>
+							{% endlanguage %}
 
+							{% language 'en' %}
 							<li>
-								<a href="javascript:;">
+								<a href="{% trans page.url %}">
 									<span class="icon flag flag-en"></span>
 									English
 								</a>
 							</li>
+							{% endlanguage %}
 
+							{% language 'fr' %}
 							<li>
-								<a href="javascript:;">
+								<a href="{% trans page.url %}">
 									<span class="icon flag flag-fr"></span>
 									Français
 								</a>
 							</li>
+							{% endlanguage %}
 
 						</ul>
 					</nav>
@@ -109,13 +115,13 @@
 					<nav class="menu menu-main menu-closed shadow-bottom">
 						<ul>
 							<li>
-								<a>
+								<a href="/{% trans 'home/' %}">
 									<i class="icon fas fa-home"></i>
 									{% trans "Home" %}
 								</a>
 							</li>
 							<li>
-								<a>
+								<a href="/{% trans 'biography/' %}">
 									<i class="icon fas fa-book"></i>
 									{% trans "Biography" %}
 								</a>
@@ -147,7 +153,7 @@
 									<a>(2006) Зона Чернобил</a>
 								</li>
 								<li>
-									<a>Всички албуми</a>
+									<a href="/{% trans 'music/' %}">Всички албуми</a>
 								</li>
 								<li>
 									<a>Кавъри</a>
