--- a/src/py/main/templates/main/accueil.html
+++ b/src/py/main/templates/main/accueil.html
@@ -1,10 +1,11 @@
 {% extends 'main/index.html' %}
+{% load i18n %}
 
 {% block welcome_block %}
 	<p>
 		Bienvenus à l'antre de Blues Dinosaure Noir (en latin: <i>Dimmu Saurus</i>). Dimmu Saurus est un projet de musique garage, dédié à la création de blues, metal et rock, sans règles ou restrictions.
 	</p>
 	<p>
-		Si vous trouvez cette idée intéressante allez écouter <a href="/musique">la discographie</a>. Ou peut-être vous êtes curieux qu'est-ce que c'est Dimmu Saurus? Alors, lisez sa <a href="/biographie">biographie</a>
+		Si vous trouvez cette idée intéressante allez écouter <a href="/{% trans 'music/' %}">la discographie</a>. Ou peut-être vous êtes curieux qu'est-ce que c'est Dimmu Saurus? Alors, lisez sa <a href="/{% trans 'biography/' %}">biographie</a>
 	</p>
 {% endblock %}
