--- a/src/py/main/templates/main/index.html
+++ b/src/py/main/templates/main/index.html
@@ -2,10 +2,21 @@
 {% load i18n %}
 
 {% block content_block %}
+	{% trans 'music/' as url_music %}
+	{% trans 'biography/' as url_biography %}
 	<div class="content content-home">
 		<article>
 			<h1 class="content-heading">{% trans "Welcome" %}</h1>
-			{% block welcome_block %}{% endblock %}
+				<p>
+					{% blocktrans trimmed %}
+						Welcome the Black Blues Dimosaur's den (latin: <i>Dimmu Saurus</i>). It is a garage project for blues, rock and metal music, without any rules or limitations. The way real music should be.
+					{% endblocktrans %}
+				</p>
+				<p>
+					{% blocktrans trimmed %}
+						If you are a fan of this kind of music, then jump straight ahead to the <a href="/{{ url_music }}">discography</a> to hear a song. Or if you are interested in the project's background and how it came to be, read more <a href="/{{ url_biography }}">about Dimmu Saurus</a>.
+					{% endblocktrans %}
+				</p>
 		</article>
 
 		<h1 class="content-heading">{% trans "News" %}</h1>
