--- a/src/py/main/templates/main/__root.html
+++ b/src/py/main/templates/main/__root.html
@@ -42,7 +42,39 @@
 
 		<link rel="stylesheet" href="static/ds.min.css">
 
-		<script src="static/ds.min.js"></script>
+				<script>
+			function isOldBrowser() {
+				"use strict";
+
+				try {
+					if (typeof Symbol === 'undefined') throw new Error;
+					eval('class C {}');
+					eval('var a = (x) => x+1');
+				} catch (e) {
+					return true;
+				}
+
+				return false;
+			}
+
+
+			var js = document.createElement('script');
+
+			if (isOldBrowser()) {
+				// modern JS is completely incompatible with older browser, so we use a transpiled version
+				js.src = 'static/ds.legacy.min.js';
+
+				// most CSS can be reused, so we just add the extra legacy rules
+				var css = document.createElement('link');
+				css.rel = 'stylesheet';
+				css.href = 'static/ds.legacy.min.css';
+				document.head.appendChild(css);
+			} else {
+				js.src = 'static/ds.min.js';
+			}
+
+			document.head.appendChild(js);
+		</script>
 	</head>
 
 	<body class="unsupported-player">
