--- a/src/css/13-m.css
+++ b/src/css/13-m.css
@@ -42,18 +42,20 @@
 	}
 
 	.header-container .logo-text {
+		align-items: center;
+		display: flex;
 		font-size: 3.6em;
 		width: 175px;
 	}
 
 	.header-container .logo-text-left {
+		justify-content: flex-end;
 		order: 2;
-		text-align: right;
 	}
 
 	.header-container .logo-text-right {
+		justify-content: flex-start;
 		order: 4;
-		text-align: left;
 	}
 
 	.header-container .logo {
@@ -128,7 +130,6 @@
 @media screen and (min-width: 48em) and (max-width: 63.99em) {
 	.header-container .logo-text {
 		height: 124px;
-		line-height: 124px;
 	}
 
 
