news on main page

--- a/src/py/main/templates/main/index.html
+++ b/src/py/main/templates/main/index.html
@@ -20,6 +20,6 @@
 		</article>
 
 		<h1 class="content-heading">{% trans "News" %}</h1>
-		{% block news_block %}{% endblock %}
+		{% include "main/news.html" %}
 	</div>
 {% endblock %}
