--- a/src/py/main/templates/main/__root.html
+++ b/src/py/main/templates/main/__root.html
@@ -171,6 +171,9 @@
 						<nav class="menu menu-music menu-closed">
 							<ul>
 								<li>
+									<a href="/{% trans 'music/' %}">{% trans 'All Albums' %}</a>
+								</li>
+								<li>
 									<a>(2014) III</a>
 								</li>
 								<li>
@@ -186,10 +189,7 @@
 									<a>(2006) Зона Чернобил</a>
 								</li>
 								<li>
-									<a href="/{% trans 'music/' %}">Всички албуми</a>
-								</li>
-								<li>
-									<a>Кавъри</a>
+									<a>{% trans 'Cover Versions' %}</a>
 								</li>
 							</ul>
 						</nav>
