--- a/src/py/main/templates/main/news.html
+++ b/src/py/main/templates/main/news.html
@@ -4,7 +4,7 @@
 {% block content_block %}
 
 	{% for n in news %}
-		<article>
+		<article class="news">
 			<h3 class="news-title">{{ n.title }}</h3>
 			<h4>{{ n.pub_date }}</h4>
 
